fix:update the sentences

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Location-based matching app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>MatchApp - Connect Nearby</title>
+    <title>マッチングアプリ - 近くで接続</title>
     <style>
       * {
         margin: 0;
